@@ -1,39 +1,34 @@
 package com.example.panu.lutakko;
 
-import android.app.Notification;
 import android.app.NotificationManager;
 import android.app.PendingIntent;
 import android.content.BroadcastReceiver;
 import android.content.Context;
 import android.content.Intent;
+import android.net.Uri;
 import android.os.Build;
 import android.support.v4.app.NotificationCompat;
-import android.util.Log;
 
 import com.loopj.android.http.HttpGet;
 
-import org.json.JSONException;
-import org.json.JSONObject;
-
+import java.net.HttpURLConnection;
 import java.net.URI;
 import java.net.URL;
 import java.text.SimpleDateFormat;
 import java.util.Date;
 
-import cz.msebera.android.httpclient.HttpResponse;
+
 import cz.msebera.android.httpclient.client.HttpClient;
 import cz.msebera.android.httpclient.impl.client.DefaultHttpClient;
 import io.proximi.proximiiolibrary.ProximiioAPI;
 import io.proximi.proximiiolibrary.ProximiioGeofence;
-
-import static android.content.Context.NOTIFICATION_SERVICE;
 
 public class BackgroundListener extends BroadcastReceiver {
 
     @Override
     public void onReceive(Context context, Intent intent) {
         ProximiioGeofence geofence;
-
+        String phoneid = Build.MANUFACTURER + " " + Build.DEVICE + " " + Build.ID;
         switch (intent.getAction()) {
             case ProximiioAPI.ACTION_GEOFENCE_ENTER:
                 String pageurl = "http://walkonen.fi/apps/dynamoapp/";
@@ -53,7 +48,7 @@ public class BackgroundListener extends BroadcastReceiver {
                 Date dNow = new Date( );
                 SimpleDateFormat ft = new SimpleDateFormat ("E yyyy.MM.dd hh:mm:ss");
                 String time = ft.format(dNow).toString();
-                insertMySQL(geofence.getName(), time, true);
+                insertMySQL(geofence.getName(), time, phoneid);
                 break;
             case ProximiioAPI.ACTION_GEOFENCE_EXIT:
                 long dwellTime = intent.getLongExtra(ProximiioAPI.EXTRA_DWELL_TIME, 0);
@@ -79,13 +74,10 @@ public class BackgroundListener extends BroadcastReceiver {
                 break;
         }
     }
-    public void insertMySQL(String place, String time, boolean enter) {
-        String link;
-        if (enter) link = "walkonen.fi/DynamoApp"
-        HttpClient client = new DefaultHttpClient();
-        HttpGet request = new HttpGet();
-        request.setURI(new URI(link));
-        HttpResponse response = client.execute(request);
+    public void insertMySQL(String place, String time, String phoneid)  {
+        String link = "http://walkonen.fi/apps/dynamoapp/mysql/insert.php?place=" + place + "&entertime=" + time + "&id=" + phoneid;
+        URL url = new URL("link");
+        HttpURLConnection urlConnection = (HttpURLConnection) url.openConnection();
     }
 
 
